force-app/main/default/objects/Scheme_Bundle_Line__c/Scheme_Bundle_Line__c.object-meta.xml
<CustomObject>
    <label>Scheme Bundle Line</label>
    <pluralLabel>Scheme Bundle Lines</pluralLabel>
    <nameField>
        <displayFormat>BUN-{0000}</displayFormat>
        <label>Bundle Line No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>