force-app/main/default/objects/Scheme_Bundle_Line__c/fields/Line_Role__c.field-meta.xml
<CustomField>
    <fullName>Line_Role__c</fullName>
    <label>Line Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Buy</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>