force-app/main/default/objects/Scheme_Bundle_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Scheme Bundle Lines</relationshipLabel>
    <relationshipName>Scheme_Bundle_Lines</relationshipName>
</CustomField>