force-app/main/default/objects/Scheme_Bundle_Line__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <label>Scheme</label>
    <type>MasterDetail</type>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Bundle Lines</relationshipLabel>
    <relationshipName>Bundle_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>